@@ -258,3 +258,9 @@ pdf: Slipher1913.pdf
 publisher = {IEEE Computer Society},
   address = {Los Alamitos, CA, USA},
 }
+
+@Misc{JonesNoYearScipy,
+  author = {Eric Jones},
+  title  = {{SciPy}: Scientific Python},
+}
+
